--- a/profil.html
+++ b/profil.html
@@ -6,15 +6,12 @@
   <title>Profil | Assistenku</title>
   <link rel="stylesheet" href="/styles.css">
   <link rel="manifest" href="/manifest.webmanifest">
-<meta name="theme-color" content="#0B5ED7">
-<link rel="apple-touch-icon" href="/assets/icons/icon-192.png">
+  <meta name="theme-color" content="#0B5ED7">
+  <link rel="apple-touch-icon" href="/assets/icons/icon-192.png">
 </head>
 
 <body>
 
-<!-- ===============================
-     NAVBAR FINAL SERAGAM
-================================= -->
 <header>
   <div class="top-header">Assistenku — Kemudahan Ada Dalam Genggaman</div>
 
@@ -43,66 +40,59 @@
   </div>
 </header>
 
-<!-- ===============================
-     PROFIL — CONTENT
-================================= -->
 <section style="padding-top:160px;">
   <h1>Profil Perusahaan</h1>
 
   <p>
-    Assistenku lahir dari kebutuhan masyarakat modern yang semakin memerlukan
-    layanan asistensi yang profesional, mudah dijangkau, dan dapat diandalkan.
-    Kami tidak hanya menghadirkan tenaga kerja, tetapi juga menghadirkan rasa
-    aman, nyaman, dan ketenangan dalam kehidupan sehari-hari.
+    Assistenku hadir sebagai layanan asistensi yang membantu kebutuhan
+    rumah tangga, individu, dan operasional bisnis secara lebih tertata.
+    Fokus kami adalah mempermudah aktivitas harian melalui layanan yang
+    dikelola dengan jelas dan bertanggung jawab.
   </p>
 
   <p>
-    Dengan pendekatan modern dan penuh empati, Assistenku dirancang sebagai
-    solusi yang membantu keluarga, individu, maupun bisnis untuk menjalankan
-    aktivitas dengan lebih mudah dan efisien.
+    Assistenku tidak sekadar menyediakan tenaga kerja, tetapi mengelola
+    layanan agar sesuai dengan kebutuhan, kondisi, dan kesepakatan yang
+    jelas antara pengguna layanan dan penyedia layanan.
   </p>
 </section>
 
 <section>
-  <h2>Sejarah Berdirinya Assistenku</h2>
+  <h2>Latar Belakang Assistenku</h2>
 
   <p>
-    Pada tahun 2023, pendiri Assistenku melihat masih banyak keluarga dan usaha
-    kecil yang kesulitan mendapatkan tenaga kerja yang jujur, terlatih, dan aman.
-    Banyak proses rekrutmen yang rumit dan tidak memberi jaminan kualitas.
+    Assistenku berangkat dari realitas bahwa banyak keluarga dan pelaku usaha
+    membutuhkan bantuan kerja yang dapat diandalkan, namun sering dihadapkan
+    pada proses pencarian tenaga yang tidak jelas dan berisiko.
   </p>
 
   <p>
-    Dari situlah muncul ide untuk membangun layanan asistensi modern yang lebih
-    manusiawi, profesional, dan transparan — layanan yang mengutamakan etika,
-    kejujuran, serta kualitas kerja yang dapat dipercaya.
+    Melalui pendekatan yang lebih rapi dan terkelola, Assistenku dibangun untuk
+    menjembatani kebutuhan tersebut dengan menyediakan layanan asistensi
+    berbasis pengalaman kerja dan rekam jejak tenaga di bidangnya.
   </p>
 
   <p>
-    Dengan sistem yang lebih tertata, metode pelatihan yang jelas, dan standar
-    seleksi yang ketat, Assistenku berkembang menjadi platform asistensi modern
-    yang menggabungkan teknologi dan nilai kemanusiaan.
+    Dengan sistem pengelolaan yang bertahap dan transparan, Assistenku
+    berkembang sebagai platform layanan asistensi yang mengutamakan
+    kejelasan proses dan kepercayaan.
   </p>
 </section>
 
 <section>
   <h2>Visi Perusahaan</h2>
   <p>
-    Menjadi penyedia layanan asistensi paling terpercaya dan mudah diakses di
-    Indonesia, yang menghadirkan kenyamanan serta ketenangan bagi keluarga dan
-    pelaku usaha.
+    Menjadi layanan asistensi yang terpercaya dan mudah diakses
+    untuk membantu kebutuhan rumah tangga dan bisnis di Indonesia.
   </p>
 
   <h2>Misi Perusahaan</h2>
-  <p>• Menyediakan tenaga kerja terlatih dan beretika tinggi.</p>
-  <p>• Menghadirkan proses layanan yang modern, cepat, dan transparan.</p>
-  <p>• Memberikan pengalaman asistensi yang aman dan profesional.</p>
-  <p>• Membangun hubungan jangka panjang dengan klien melalui kualitas.</p>
+  <p>• Menyediakan layanan asistensi berbasis pengalaman kerja.</p>
+  <p>• Mengelola layanan secara rapi, jelas, dan bertanggung jawab.</p>
+  <p>• Membantu pengguna layanan bekerja lebih efisien.</p>
+  <p>• Menjaga kepercayaan melalui proses dan komunikasi yang transparan.</p>
 </section>
 
-<!-- ===============================
-     FOUNDER SECTION
-================================= -->
 <section>
   <h2>Founder & Co-Founder</h2>
 
@@ -112,9 +102,9 @@
       <img src="/founder1.png" class="founder-img" alt="Founder Assistenku">
       <h3>Abdurrahman Hanif</h3>
       <p>
-        Founder Assistenku. Memiliki pengalaman dalam operasional, manajemen,
-        dan layanan asistensi modern. Fokus pada kejujuran, profesionalitas,
-        dan kemudahan layanan untuk masyarakat.
+        Founder Assistenku. Berpengalaman dalam pengelolaan operasional
+        dan layanan asistensi. Berfokus pada kejelasan proses,
+        kepercayaan, dan tanggung jawab layanan.
       </p>
     </div>
 
@@ -122,18 +112,15 @@
       <img src="/founder2.png" class="founder-img" alt="Co-Founder Assistenku">
       <h3>Putri Rahmadani</h3>
       <p>
-        Co-Founder Assistenku. Berpengalaman dalam rekrutmen dan pengembangan
-        tenaga kerja, bertanggung jawab terhadap kurikulum pelatihan serta
-        standar kualitas tenaga kerja.
+        Co-Founder Assistenku. Berpengalaman dalam proses seleksi dan
+        pengelolaan tenaga kerja berbasis pengalaman dan rekam kerja,
+        serta menjaga standar kualitas layanan.
       </p>
     </div>
 
   </div>
 </section>
 
-<!-- ===============================
-     LEGAL SECTION
-================================= -->
 <section>
   <h2>Legalitas Perusahaan</h2>
 
@@ -143,13 +130,12 @@
       <h3>Dokumen Legal Perusahaan</h3>
       <p>
         Assistenku merupakan badan usaha yang terdaftar secara sah
-        dan menjalankan operasional sesuai dengan ketentuan hukum
+        dan menjalankan kegiatan usaha sesuai dengan ketentuan hukum
         yang berlaku di Indonesia.
       </p>
       <p>
-        Seluruh dokumen legal seperti akta pendirian, pengesahan AHU,
-        dan perizinan usaha tersedia dan dapat diakses sesuai
-        kebutuhan kerja sama.
+        Dokumen legal seperti akta pendirian, pengesahan AHU,
+        dan perizinan usaha tersedia untuk keperluan kerja sama.
       </p>
     </div>
 
@@ -176,15 +162,11 @@
   </div>
 </section>
 
-<!-- ===============================
-     COMPANY PROFILE CTA
-================================= -->
 <section class="kompro-cta">
   <h2>Kenali Assistenku Lebih Dekat</h2>
 
   <p class="kompro-desc">
-    Kepercayaan dibangun dari keterbukaan dan komitmen nyata.
-    Pelajari visi, nilai, dan layanan Assistenku secara menyeluruh.
+    Kepercayaan dibangun melalui kejelasan proses dan keterbukaan informasi.
   </p>
 
   <a href="/kompro.html" class="btn-primary kompro-btn">
@@ -192,7 +174,7 @@
   </a>
 
   <p class="kompro-note">
-    Profil perusahaan, visi & misi, layanan, serta komitmen Assistenku.
+    Informasi perusahaan, visi, misi, dan layanan Assistenku.
   </p>
 </section>
 
@@ -201,7 +183,8 @@
 </footer>
 
 <script src="/script.js"></script>
-  <div id="pwaInstallBanner" class="pwa-install" style="display:none;">
+
+<div id="pwaInstallBanner" class="pwa-install" style="display:none;">
   <div class="pwa-install__left">
     <img src="/assets/icons/icon-192.png" alt="Assistenku" class="pwa-install__icon">
     <div class="pwa-install__text">
@@ -213,6 +196,7 @@
   <div class="pwa-install__right">
     <button id="pwaInstallBtn" class="pwa-install__btn">Instal</button>
   </div>
-  </div>
+</div>
+
 </body>
 </html>
