--- a/karir.html
+++ b/karir.html
@@ -6,8 +6,8 @@
   <title>Karir | Assistenku</title>
   <link rel="stylesheet" href="/styles.css">
   <link rel="manifest" href="/manifest.webmanifest">
-<meta name="theme-color" content="#0B5ED7">
-<link rel="apple-touch-icon" href="/assets/icons/icon-192.png">
+  <meta name="theme-color" content="#0B5ED7">
+  <link rel="apple-touch-icon" href="/assets/icons/icon-192.png">
 </head>
 
 <body class="karir-page">
@@ -16,7 +16,7 @@
   <div class="top-header">Assistenku — Kemudahan Ada Dalam Genggaman</div>
 
   <div class="navbar">
-    <img src="/logo.png" class="logo">
+    <img src="/logo.png" class="logo" alt="Assistenku">
 
     <nav>
       <ul>
@@ -40,60 +40,52 @@
   </div>
 </header>
 
+<!-- ===============================
+     PEMBUKA KARIR
+================================= -->
 <section style="padding-top:160px;">
   <h1>Karir di Assistenku</h1>
 
   <p>
-    Assistenku membuka kesempatan bagi tenaga kerja yang jujur, disiplin,
-    dan ingin berkembang. Kami menyediakan peluang kerja yang aman, jelas,
-    dan profesional dengan dukungan pembinaan di awal penempatan.
+    Assistenku membuka kesempatan kerja bagi tenaga yang telah memiliki
+    pengalaman sesuai bidangnya.
   </p>
 
   <p>
-    Setiap kandidat akan mendapatkan pengarahan, bimbingan, serta dukungan
-    agar siap ditempatkan di lingkungan kerja yang profesional dan manusiawi.
+    Proses seleksi dilakukan berdasarkan kebutuhan layanan dan kesiapan kerja.
+    Tidak tersedia pelatihan dasar sebelum penempatan.
   </p>
 </section>
 
+<!-- ===============================
+     KETENTUAN UMUM
+================================= -->
+<section>
+  <h2>Ketentuan Umum</h2>
+  <ul>
+    <li>Penempatan berdasarkan pengalaman dan kebutuhan klien</li>
+    <li>Jobdesk dan lokasi dijelaskan sebelum penugasan</li>
+    <li>Kesepakatan kerja disampaikan secara terbuka</li>
+    <li>Tidak ada penempatan sepihak</li>
+  </ul>
+</section>
+
+<!-- ===============================
+     LOWONGAN TERSEDIA
+================================= -->
 <section>
   <h2>Lowongan Tersedia</h2>
 
   <div class="card-grid">
 
-    <!-- Marketing Freelance -->
     <div class="card">
-      <div class="card-image">
-        <img src="loker-marketing-freelance.png"
-             alt="Lowongan Marketing Freelance Assistenku">
-      </div>
-
       <h3>Marketing Freelance</h3>
-      <p>
-        Kesempatan bagi individu yang ingin mendapatkan penghasilan tambahan
-        dengan memasarkan layanan Assistenku secara fleksibel dan profesional.
-      </p>
+      <p>Pemasaran layanan Assistenku secara fleksibel.</p>
 
-      <strong>Peran Utama:</strong>
       <ul>
-        <li>Mempromosikan layanan Assistenku kepada calon klien</li>
-        <li>Membantu klien memahami kebutuhan layanan</li>
-        <li>Menghubungkan klien dengan tim Assistenku</li>
-      </ul>
-
-      <strong>Skema Komisi:</strong>
-      <ul>
-        <li>Komisi tetap <strong>Rp100.000</strong> per <strong>SPL LOLOS</strong></li>
-        <li>Bonus target bulanan hingga <strong>Rp1.500.000</strong></li>
-        <li>Komisi dibayar setelah SPL berstatus <strong>SELESAI</strong></li>
-        <li>Tidak berbasis persentase profit</li>
-        <li>Tidak ada potongan pajak & BPJS</li>
-      </ul>
-
-      <strong>Cocok untuk:</strong>
-      <ul>
-        <li>Freelancer / pekerja lepas</li>
-        <li>Pekerja aktif yang ingin penghasilan tambahan</li>
-        <li>Individu dengan relasi luas</li>
+        <li>Komisi tetap Rp100.000 per SPL lolos</li>
+        <li>Bonus target bulanan</li>
+        <li>Pembayaran setelah SPL selesai</li>
       </ul>
 
       <div class="apply-box">
@@ -101,38 +93,16 @@
            href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20Marketing%20Freelance%20Assistenku">
           Lamar via WhatsApp
         </a>
-
-        <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20CV%20Marketing%20Freelance%20Assistenku">
-          Lamar via Email
-        </a>
-
-        <a class="btn-outline" href="/marketing-freelancer.html">
-          Lihat Detail Program
-        </a>
       </div>
     </div>
 
-    <!-- ART -->
     <div class="card">
-      <div class="card-image">
-        <img src="loker-art.png" alt="Lowongan Asisten Rumah Tangga (ART)">
-      </div>
-
       <h3>Asisten Rumah Tangga (ART)</h3>
-      <p>Membantu pekerjaan rumah tangga dengan rapi dan profesional.</p>
+      <p>Pekerjaan rumah tangga sesuai kebutuhan klien.</p>
 
-      <strong>Tugas:</strong>
-      <ul>
-        <li>Pembersihan rumah</li>
-        <li>Mencuci & menyetrika</li>
-        <li>Memasak dasar</li>
-      </ul>
-
-      <strong>Syarat:</strong>
       <ul>
         <li>Usia 18–50 tahun</li>
-        <li>Jujur & bertanggung jawab</li>
+        <li>Pengalaman diutamakan</li>
         <li>Sehat jasmani</li>
       </ul>
 
@@ -141,40 +111,17 @@
            href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20ART">
           Lamar via WhatsApp
         </a>
-
-        <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20ART">
-          Lamar via Email
-        </a>
-
-        <a class="btn-outline" href="loker-art.html">
-          Lihat Detail Lowongan
-        </a>
       </div>
     </div>
 
-    <!-- Pendamping Lansia -->
     <div class="card">
-      <div class="card-image">
-        <img src="loker-caregiver.png"
-             alt="Lowongan Pendamping Lansia / Caregiver">
-      </div>
-
       <h3>Pendamping Lansia / Caregiver</h3>
-      <p>Mendampingi lansia dengan perhatian dan empati.</p>
+      <p>Pendampingan lansia sesuai kebutuhan harian.</p>
 
-      <strong>Tugas:</strong>
-      <ul>
-        <li>Pendamping aktivitas harian</li>
-        <li>Membantu kebutuhan dasar lansia</li>
-        <li>Menjadi teman bicara</li>
-      </ul>
-
-      <strong>Syarat:</strong>
       <ul>
         <li>Usia 20–45 tahun</li>
-        <li>Sabar, sopan, dan telaten</li>
-        <li>Sehat jasmani</li>
+        <li>Sabar dan bertanggung jawab</li>
+        <li>Pengalaman relevan</li>
       </ul>
 
       <div class="apply-box">
@@ -182,34 +129,16 @@
            href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20Pendamping%20Lansia">
           Lamar via WhatsApp
         </a>
-
-        <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20Pendamping%20Lansia">
-          Lamar via Email
-        </a>
-
-        <a class="btn-outline" href="loker-caregiver.html">
-          Lihat Detail Lowongan
-        </a>
       </div>
     </div>
 
-    <!-- Pengemudi Pribadi -->
     <div class="card">
       <h3>Pengemudi Pribadi</h3>
-      <p>Mengemudi dengan aman, sopan, dan profesional.</p>
+      <p>Layanan pengemudi untuk kebutuhan keluarga dan bisnis.</p>
 
-      <strong>Tugas:</strong>
-      <ul>
-        <li>Antar jemput keluarga</li>
-        <li>Perjalanan dinas</li>
-        <li>Perawatan kendaraan ringan</li>
-      </ul>
-
-      <strong>Syarat:</strong>
       <ul>
         <li>SIM A aktif</li>
-        <li>Disiplin & sopan</li>
+        <li>Disiplin dan sopan</li>
       </ul>
 
       <div class="apply-box">
@@ -217,71 +146,22 @@
            href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20Driver">
           Lamar via WhatsApp
         </a>
-
-        <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20Pengemudi%20Pribadi">
-          Lamar via Email
-        </a>
       </div>
     </div>
 
-    <!-- Penjaga Toko -->
     <div class="card">
-      <h3>Penjaga Toko</h3>
-      <p>Melayani pembeli dan menjaga kebersihan area toko.</p>
+      <h3>AutoCAD Drafter</h3>
+      <p>Pekerjaan drafting teknis berbasis proyek.</p>
 
-      <strong>Tugas:</strong>
       <ul>
-        <li>Melayani pembeli</li>
-        <li>Menata barang</li>
-        <li>Mengelola stok</li>
+        <li>Junior – Expert</li>
+        <li>Portofolio diutamakan</li>
       </ul>
-
-      <strong>Syarat:</strong>
-      <ul>
-        <li>Komunikatif & ramah</li>
-        <li>Teliti</li>
-      </ul>
-
-      <div class="apply-box">
-        <a class="btn-primary" target="_blank"
-           href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20Penjaga%20Toko">
-          Lamar via WhatsApp
-        </a>
-
-        <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20Penjaga%20Toko">
-          Lamar via Email
-        </a>
-      </div>
-    </div>
-
-    <!-- AutoCAD Drafter -->
-    <div class="card">
-      <div class="card-image">
-        <img src="/loker-autocad-drafter.png"
-             alt="Lowongan AutoCAD Drafter Assistenku">
-      </div>
-
-      <h3>AutoCAD Drafter (Junior – Intermediate – Expert)</h3>
-      <p>
-        Kesempatan bagi Fresh Graduate maupun profesional untuk bergabung
-        melalui proyek nyata dan berkelanjutan bersama Assistenku.
-      </p>
 
       <div class="apply-box">
         <a class="btn-primary" target="_blank"
            href="https://wa.me/628989760020?text=Saya%20ingin%20melamar%20AutoCAD%20Drafter">
           Lamar via WhatsApp
-        </a>
-
-        <a class="btn-secondary" target="_blank"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Kerja%20-%20AutoCAD%20Drafter">
-          Lamar via Email
-        </a>
-
-        <a class="btn-outline" href="loker-autocad-drafter.html">
-          Lihat Detail Lowongan
         </a>
       </div>
     </div>
@@ -289,24 +169,10 @@
   </div>
 </section>
 
-
-
 <footer>
   <strong>PT Assistenku Solusi Indonesia</strong>
 </footer>
-<script src="/script.js"></script>
-  <div id="pwaInstallBanner" class="pwa-install" style="display:none;">
-  <div class="pwa-install__left">
-    <img src="/assets/icons/icon-192.png" alt="Assistenku" class="pwa-install__icon">
-    <div class="pwa-install__text">
-      <div class="pwa-install__title">Instal Assistenku</div>
-      <div class="pwa-install__subtitle">assistenku.com</div>
-    </div>
-  </div>
 
-  <div class="pwa-install__right">
-    <button id="pwaInstallBtn" class="pwa-install__btn">Instal</button>
-  </div>
-  </div>
+<script src="/script.js"></script>
 </body>
 </html>
