--- a/ketentuan-layanan.html
+++ b/ketentuan-layanan.html
@@ -10,27 +10,48 @@
     body {
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
-      background: #f9fafb;
+      background: linear-gradient(180deg, #0f3d8a 0%, #f9fafb 40%);
       color: #1f2937;
       line-height: 1.7;
+    }
+
+    .header {
+      text-align: center;
+      padding: 100px 20px 40px;
+      color: #ffffff;
+    }
+
+    .header img {
+      width: 120px;
+      margin-bottom: 16px;
+    }
+
+    .header h1 {
+      font-size: 34px;
+      margin: 0;
+    }
+
+    .header p {
+      opacity: 0.95;
+      margin-top: 10px;
+      font-size: 16px;
     }
 
     .container {
       max-width: 900px;
       margin: auto;
-      padding: 140px 20px 80px;
+      padding: 0 20px 80px;
     }
 
-    h1, h2 {
-      color: #0f3d8a;
-    }
-
-    h1 {
-      font-size: 32px;
-      margin-bottom: 12px;
+    .box {
+      background: #ffffff;
+      border-radius: 14px;
+      padding: 40px;
+      box-shadow: 0 8px 24px rgba(15,61,138,0.12);
     }
 
     h2 {
+      color: #0f3d8a;
       font-size: 22px;
       margin-top: 40px;
       margin-bottom: 12px;
@@ -49,28 +70,27 @@
       margin-bottom: 6px;
     }
 
-    .box {
-      background: #ffffff;
-      border-radius: 12px;
-      padding: 32px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-    }
-
     footer {
       text-align: center;
       font-size: 14px;
       color: #6b7280;
-      padding: 30px 0 40px;
+      padding: 40px 20px;
     }
   </style>
 </head>
 
 <body>
 
+<!-- HEADER -->
+<div class="header">
+  <img src="/logo.png" alt="Assistenku">
+  <h1>Ketentuan Layanan</h1>
+  <p>Dasar penggunaan layanan Assistenku secara profesional dan bertanggung jawab</p>
+</div>
+
 <div class="container">
   <div class="box">
 
-    <h1>Ketentuan Layanan Assistenku</h1>
     <p>
       Ketentuan Layanan ini mengatur hubungan antara <strong>Assistenku</strong>,
       <strong>Klien</strong>, dan <strong>Mitra</strong> dalam penggunaan seluruh
@@ -80,23 +100,23 @@
 
     <h2>Prinsip Kerja Assistenku</h2>
     <ul>
-      <li>Assistenku merupakan platform pengelolaan layanan asistensi berbasis sistem</li>
+      <li>Assistenku adalah platform pengelolaan layanan asistensi berbasis sistem</li>
       <li>Assistenku berperan sebagai penghubung dan pengelola proses layanan</li>
       <li>Assistenku tidak menggantikan tanggung jawab pribadi Klien maupun Mitra</li>
-      <li>Seluruh layanan berjalan sesuai ketentuan dan hukum yang berlaku</li>
+      <li>Seluruh layanan berjalan sesuai hukum yang berlaku</li>
     </ul>
 
     <h2>Hak dan Kewajiban Klien (Ringkasan)</h2>
     <p><strong>Hak Klien:</strong></p>
     <ul>
-      <li>Mendapatkan layanan sesuai permintaan dan kesepakatan</li>
-      <li>Mendapatkan informasi terkait layanan dan mitra</li>
-      <li>Menyampaikan evaluasi atau laporan layanan</li>
+      <li>Mendapatkan layanan sesuai kesepakatan</li>
+      <li>Mendapatkan informasi layanan dan mitra</li>
+      <li>Menyampaikan evaluasi atau laporan</li>
     </ul>
 
     <p><strong>Kewajiban Klien:</strong></p>
     <ul>
-      <li>Memberikan informasi kebutuhan secara benar dan jelas</li>
+      <li>Memberikan informasi kebutuhan secara benar</li>
       <li>Menggunakan layanan hanya untuk kegiatan yang sah</li>
       <li>Melakukan pembayaran sesuai ketentuan</li>
       <li>Bertanggung jawab atas risiko dan kerugian akibat tindakan Klien</li>
@@ -107,23 +127,23 @@
     <ul>
       <li>Mendapatkan penugasan sesuai kesepakatan</li>
       <li>Mendapatkan pembayaran atas layanan yang diselesaikan</li>
-      <li>Mendapatkan perlindungan sistem selama bekerja sesuai ketentuan</li>
+      <li>Mendapatkan perlindungan sistem selama mematuhi ketentuan</li>
     </ul>
 
     <p><strong>Kewajiban Mitra:</strong></p>
     <ul>
-      <li>Melaksanakan tugas secara profesional dan bertanggung jawab</li>
+      <li>Melaksanakan tugas secara profesional</li>
       <li>Mematuhi hukum dan aturan layanan</li>
       <li>Tidak melakukan tindakan di luar ruang lingkup layanan</li>
-      <li>Bertanggung jawab atas kerugian akibat kelalaian atau pelanggaran</li>
+      <li>Bertanggung jawab atas kerugian akibat pelanggaran atau kelalaian</li>
     </ul>
 
     <h2>Pembayaran dan Pembatalan</h2>
     <ul>
       <li>Pembayaran dilakukan sesuai metode dan ketentuan Assistenku</li>
-      <li>Pembatalan dapat dikenakan ketentuan tertentu berdasarkan status layanan</li>
-      <li>Assistenku berhak menahan pembayaran jika terjadi pelanggaran ketentuan</li>
-      <li>Ketentuan teknis dapat disesuaikan pada masing-masing layanan</li>
+      <li>Pembatalan dapat dikenakan ketentuan tertentu</li>
+      <li>Assistenku berhak menahan pembayaran jika terjadi pelanggaran</li>
+      <li>Ketentuan teknis menyesuaikan jenis layanan</li>
     </ul>
 
     <h2>Batasan Tanggung Jawab</h2>
@@ -131,15 +151,15 @@
       <li>Assistenku tidak bertanggung jawab atas kerugian antara Klien dan Mitra</li>
       <li>Kerugian akibat Mitra menjadi tanggung jawab Klien dan/atau Mitra</li>
       <li>Kerugian akibat Klien menjadi tanggung jawab Klien</li>
-      <li>Assistenku tidak bertanggung jawab atas aktivitas di luar sistem</li>
+      <li>Aktivitas di luar sistem menjadi tanggung jawab masing-masing pihak</li>
     </ul>
 
     <h2>Keamanan, Kepatuhan, dan Tindakan Kriminal</h2>
     <ul>
-      <li>Layanan Assistenku hanya digunakan untuk kegiatan yang sah</li>
+      <li>Layanan hanya digunakan untuk kegiatan yang sah</li>
       <li><strong>Assistenku tidak terlibat, tidak memfasilitasi, dan tidak bertanggung jawab atas tindakan kriminal</strong></li>
       <li>Assistenku berhak menghentikan layanan jika terdapat indikasi pelanggaran hukum</li>
-      <li>Assistenku dapat bekerja sama dengan pihak berwenang sesuai hukum yang berlaku</li>
+      <li>Assistenku dapat bekerja sama dengan pihak berwenang sesuai ketentuan hukum</li>
     </ul>
 
     <h2>Penutup</h2>
