--- a/dapurputri/dapurputri.html
+++ b/dapurputri/dapurputri.html
@@ -273,5 +273,11 @@
   </footer>
 
   <script src="/dapurputri/assets/dapurputri.js"></script>
+  <div class="bottom-nav">
+  <a href="#menu"><span>🍽️</span>Menu Favorit</a>
+  <a href="#paket"><span>📦</span>Paket Catering</a>
+  <a href="#cara"><span>📝</span>Cara Pesan</a>
+  <a href="#kontak"><span>📲</span>Kontak / Order</a>
+</div>
 </body>
 </html>
