--- a/dapurputri/bawang.html
+++ b/dapurputri/bawang.html
@@ -61,5 +61,12 @@
 </footer>
 
 <script src="assets/bawang.js"></script>
+  <div class="bottom-nav">
+  <a href="#menu"><span>🍽️</span>Menu Favorit</a>
+  <a href="#paket"><span>📦</span>Paket Catering</a>
+  <a href="#cara"><span>📝</span>Cara Pesan</a>
+  <a href="#kontak"><span>📲</span>Kontak / Order</a>
+</div>
+
 </body>
 </html>
